--- a/packages/vuetify/src/components/VFileInput/_variables.scss
+++ b/packages/vuetify/src/components/VFileInput/_variables.scss
@@ -1,6 +1,2 @@
-$file-input-filled-padding-top: 22px !default;
-$file-input-chip-margin: 4px !default;
-$file-input-outlined-padding: 6px 0 !default;
-$file-input-outlined-dense-padding: 3px 0 !default;
-$file-input-slot-min-height: 32px !default;
-$file-input-slot-dense-min-height: 26px !default;
+// Defaults
+$file-input-chip-margin-inline-end: 4px !default;
