feat(VTextField): port to v3 (#13996)
fixes #7872
fixes #12989

Co-authored-by: John Leider <john.j.leider@gmail.com>

--- a/packages/vuetify/src/components/VCounter/_variables.scss
+++ b/packages/vuetify/src/components/VCounter/_variables.scss
@@ -1,5 +1,4 @@
-@import '../../styles/styles.sass';
-
+// Defaults
 $counter-font-size: 12px !default;
 $counter-line-height: $counter-font-size !default;
 $counter-min-height: 12px !default;
