--- a/packages/vuetify/src/components/VInput/VInput.sass
+++ b/packages/vuetify/src/components/VInput/VInput.sass
@@ -23,9 +23,11 @@
   line-height: $input-details-line-height
   min-height: $input-details-min-height
   padding-top: $input-details-padding-above
+  overflow: hidden
   padding-inline-start: $input-details-padding-inline
   padding-inline-end: $input-details-padding-inline
   justify-content: space-between
+  transition: $input-details-transition
 
 .v-input__prepend,
 .v-input__append
