--- a/packages/vuetify/src/components/VInput/_variables.scss
+++ b/packages/vuetify/src/components/VInput/_variables.scss
@@ -7,9 +7,10 @@ $input-details-font-size: .75rem !default;
 $input-details-font-weight: 400 !default;
 $input-details-letter-spacing: .0333333333em !default;
 $input-details-line-height: normal !default;
-$input-details-min-height: 16px !default;
+$input-details-min-height: 22px !default;
 $input-details-padding-above: 6px !default;
 $input-details-padding-inline: 16px !default;
+$input-details-transition: 150ms $standard-easing !default;
 
 // AFFIXES
 $input-affix-margin-inside: 16px !default;
