--- a/packages/vuetify/src/styles/settings/_variables.scss
+++ b/packages/vuetify/src/styles/settings/_variables.scss
@@ -107,7 +107,7 @@ $grid-gutter: $spacer * 6 !default;
 $form-grid-gutter: $spacer * 2 !default;
 $grid-columns: 12 !default;
 
-$container-padding-x: $grid-gutter * 0. !default;
+$container-padding-x: $grid-gutter * .5 !default;
 
 $grid-gutters: () !default;
 $grid-gutters: map-deep-merge(
