--- a/packages/vuetify/src/components/VInput/VInput.sass
+++ b/packages/vuetify/src/components/VInput/VInput.sass
@@ -15,21 +15,19 @@
 
 .v-input__details
   align-items: flex-end
-  // TODO: fix this when text-fields are implemented
-  color: rgba(0, 0, 0, .6)
   display: flex
   font-size: $input-details-font-size
   font-weight: $input-details-font-weight
   grid-area: messages
   letter-spacing: $input-details-letter-spacing
   line-height: $input-details-line-height
+  margin-bottom: $input-details-margin-bottom
   min-height: $input-details-min-height
   padding-top: $input-details-padding-above
   overflow: hidden
   padding-inline-start: $input-details-padding-inline
   padding-inline-end: $input-details-padding-inline
   justify-content: space-between
-  transition: $input-details-transition
 
 .v-input__prepend,
 .v-input__append
