--- a/packages/vuetify/src/components/VDialog/VDialog.sass
+++ b/packages/vuetify/src/components/VDialog/VDialog.sass
@@ -49,6 +49,13 @@
     margin: 0
     width: 100%
     height: 100%
+    max-width: 100%
+    max-height: 100%
     overflow-y: auto
     top: 0
     left: 0
+
+    > .v-card,
+    > .v-sheet
+      min-height: 100%
+      min-width: 100%
