fix: don't use pseudo elements for shadows

--- a/packages/vuetify/src/components/VExpansionPanel/VExpansionPanel.sass
+++ b/packages/vuetify/src/components/VExpansionPanel/VExpansionPanel.sass
@@ -30,6 +30,8 @@
   list-style-type: none
   padding: 0
   width: 100%
+  position: relative
+  z-index: 1
 
   &:not(&--variant-accordion)
     > :not(:first-child):not(:last-child):not(.v-expansion-panel--active):not(.v-expansion-panel--before-active)
