--- a/packages/vuetify/src/components/VCheckbox/VCheckbox.sass
+++ b/packages/vuetify/src/components/VCheckbox/VCheckbox.sass
@@ -1,9 +1,63 @@
-@import './_variables.scss'
+@forward './variables'
+@use 'sass:map'
+@use '../../styles/settings'
+@use '../../styles/tools'
+@use './variables' as *
 
-.v-input--checkbox
-  &.v-input--indeterminate
-    &.v-input--is-disabled
-      opacity: $checkbox-disabled-opacity
+.v-checkbox
+  .v-input__details
+    padding: 6px 12px 0
 
-  &.v-input--dense
-    margin-top: $checkbox-dense-margin-top
+.v-checkbox__input
+  display: flex
+  align-items: center
+  justify-content: center
+  position: relative
+  width: 40px
+  height: 40px
+
+  input
+    position: absolute
+    left: 0
+    top: 0
+    width: 100%
+    height: 100%
+    opacity: 0
+    cursor: pointer
+
+  &::before
+    @include tools.absolute()
+    border-radius: 100%
+    background-color: currentColor
+    opacity: 0
+    transition: opacity .2s ease-in-out
+    pointer-events: none
+
+  &:hover::before
+    opacity: calc(#{map.get(settings.$states, 'hover')} * var(--v-theme-overlay-multiplier))
+
+  .v-checkbox--focus-visible &::before
+    opacity: calc(#{map.get(settings.$states, 'focus')} * var(--v-theme-overlay-multiplier))
+
+.v-checkbox__control
+  align-items: center
+  contain: layout
+  display: flex
+  flex: 1 0
+  grid-area: control
+  height: var(--v-input-control-height)
+  position: relative
+
+// TODO: normalise state classes
+.v-checkbox
+  &--disabled
+    .v-icon,
+    .v-messages
+      color: $checkbox-disabled-color
+
+  &--error
+    color: $checkbox-error-color
+
+    .v-icon,
+    .v-messages
+      color: $checkbox-error-color
