fix(VImg): remove initial transition

--- a/packages/vuetify/src/components/VImg/VImg.sass
+++ b/packages/vuetify/src/components/VImg/VImg.sass
@@ -6,6 +6,9 @@
   --v-theme-overlay-multiplier: 3
   z-index: 0
 
+  &--booting .v-responsive__sizer
+    transition: none
+
 .v-img__img,
 .v-img__picture,
 .v-img__gradient,
